<resources>
    <string name="app_name">LUMI</string>
    <string name="preference_file_key">io.github.sogoagain.lumi.PREFERENCE_FILE_KEY</string>

    <string name="prompt_phone">전화번호</string>
    <string name="prompt_date">예약일 (YYYYMMDD)</string>
    <string name="prompt_name">성명</string>
    <string name="prompt_booking">예약번호</string>
    <string name="not_booking">아직 예약하지 않으셨나요? 먼저 예약하세요.</string>

    <string name="make_a_reservation">Make A Reservation"</string>
    <string name="already_reservation">이미 예약하셨나요? 체크인하세요.</string>
    <string name="success_reservation">성공적으로 예약했습니다.</string>
    <string name="fail_reservation">예약에 실패했습니다. 다시 시도해주세요.</string>

    <string name="lumi_init">루미를 불러주세요.</string>
    <string name="lumi_call">말씀하세요.</string>
    <string name="lumi_success">네! 알겠어요.</string>
    <string name="lumi_error">다시 말씀해 주실래요?</string>
    <string name="lumi_connecting">루미를 깨우는 중이예요.</string>

    <string name="intent_room_number">ROOM_NUMBER</string>
    <string name="intent_permission">IS_PERMITTED</string>

    <string name="str_check_out">Check Out</string>
    <string name="str_check_in">Check In</string>
    <string name="welcome">님 환영합니다.</string>
    <string name="good_bye">안녕히가세요.</string>
    <string name="do_not_understand">죄송합니다. 다시 말씀해 주세요.</string>
    <string name="error_invalid_booking">예약번호를 확인해 주세요.</string>
    <string name="error_invalid_phone">휴대폰 번호를 확인해 주세요.</string>
    <string name="error_incorrect_phone">정보가 일치하지 않습니다.</string>
    <string name="error_field_required">항목을 모두 입력해주세요.</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>
    <string name="title_activity_login">Check in</string>

    <!-- Strings related to login -->

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
